--- a/.gitignore
+++ b/.gitignore
@@ -183,5 +183,10 @@ ctre_sim/
 /.cache
 compile_commands.json
 
+# Build constants 
+
+src/main/java/frc/robot/BuildConstants.java
+
 # Eclipse generated file for annotation processors
 .factorypath
+
