Add BrakeController utility and integrate into Robot and ModuleIOSpark

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ src/main/java/frc/robot/BuildConstants.java
 # Eclipse generated file for annotation processors
 .factorypath
 
+src/main/java/frc/robot/BuildConstants.java
