--- a/custom_assets/Robot_Po/config.json
+++ b/custom_assets/Robot_Po/config.json
@@ -2,20 +2,50 @@
   "name": "po",
   "isFTC": false,
   "rotations": [
-    {  "axis": "x", "degrees": 90
-    }, 
-    {  "axis": "z", "degrees": 270
+    {
+      "axis": "x",
+      "degrees": 90
+    },
+    {
+      "axis": "z",
+      "degrees": 270
     }
   ],
+  "position": [0, 0, 0.04],
   "cameras": [],
   "components": [
-     {
-    "zeroedRotations": [ { "axis": "x", "degrees": 90 }, { "axis": "z", "degrees": 270 } ],
-    "zeroedPosition": [0, 0, 0] 
-  },
-  {
-    "zeroedRotations": [ { "axis": "x", "degrees": 90 }, { "axis": "z", "degrees": 270 } ],
-    "zeroedPosition": [0, 0, 0] 
-  }
+    {
+      "zeroedRotations": [
+        {"axis": "x",
+          "degrees": 90
+        },
+        {
+          "axis": "y",
+          "degrees": 37
+        }
+      ],
+      "zeroedPosition": [
+        -0.275,
+        -0.30,
+        0.22
+      ]
+    },
+    {
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 90
+        },
+        {
+          "axis": "z",
+          "degrees": 19
+        }
+      ],
+      "zeroedPosition": [
+        0.18,
+        -0.13,
+        0.035
+      ]
+    }
   ]
 }
